Cleared up sensitive data

--- a/app/.env.example
+++ b/app/.env.example
@@ -9,3 +9,6 @@ STATIC_ROOT=<Root to static files>
 DJANGO_SUPERUSER_PASSWORD=admin
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=''
+POSTGRES_DB=<Your db name>
+POSTGRES_USER=<Your db user>
+POSTGRES_PASSWORD=<Your db password>
